--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
 			<div class="sub_th_1">
 		      <div class="sub_th_sb">		
-				<p class="p1">I Love What I do</p>
+				<p class="p1" style="text-align:center;">I Love What I do</p>
 				<p class="p3"></p>
 			  </div>	
-				<p class="p4">Scroll down to learn more</p>
+				<p class="p4" style="text-align:center;">Scroll down to learn more</p>
 				<p class="p2"><a href="#project_intro"></a></p>	
 			</div>
 		</div>
