--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -12,72 +12,86 @@
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/menus.js"></script>
 </head>
 <body>
 	<div class="BD">
 		<div class="Bg">
         
         <div class="context">
-		    <div class="context_left swr_context_left">
-		      <div class="context_left_title"><span>UX Design</span></div>  
-		      <div></div>
-		    </div>
-
 		    <div class="context_right">
-                <div class="swr_context_right_title">
+                <div class="tc_context_right_title">
                     <h1>TourConnect</h1>
                 </div>
-		    	<div class="swr_context_title swr_context_title_1"></div>
+		    	<div class="tc_context_title tc_context_title_1"></div>
 		    	<div class="context_p">
-                    <div class="context_p_box sh_context_p_box">
+                    <div class="context_p_box tc_context_p_box">
                         <h1>BACKGROUND</h1>
-                         <p>TourConnect is an online, global community for the B2B tourism/travel industry. TourConnect can help you make new business partners, stay connected with your current partners, and TourConnect also have tools to help make doing business easier - like automating the annual contracting process. In simpler terms, TourConnect has two main functions, One is help user find new partners or current partners, the another is help you build e-contract with your partners.<br><br>I was joined TourConnect as a UX designer. My work include new features development and redesign the existing product to improve a better experience for user. I focus on streamlines product workflow and design doable solutions. I am the only designer in TourConnect team so I was responsible for whole design process including research, use-case analysis, user feedback review, user flow design, prototyping and user interface design. </p>
+                         <p>TourConnect is an online, global community for the <em style="font-weight:900;">B2B</em> tourism/travel industry. There has two main services from TourConnect. First, TourConnect can help you find new business partners or stay connected with your current partners in our network. Second, TourConnect have a tool to help you build and manage the e-contracts.<br><br>I was joined TourConnect as the first designer. My work include new features development and redesign the existing product to improve a better experience for user. I focus on streamlines product workflow and design doable solutions. I was responsible for whole design process including research, use-case analysis, user feedback review, user flow design, prototyping and user interface design. </p>
 		    	    </div>
-                </div>
-
-                <div class="context_p">
-                    <div class="context_p_box swr_context_p_box">
-                        <h1>OBJECTIVES</h1>
-                        <p>The primary goal of my job is to provide better experience for users in Connection, in order to increment the business opportunities for users.​ In the meantime, I also create some new functions according to the users requirements.</p>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>PROJECT OVERVIEW</h1>
+                        <p>Redesign the current TourConnect website product in an attempt to increase usage and improve ease of use.</p>
                     </div>
-                </div>
-
-                <div class="context_p">
-                    <div class="context_p_box swr_context_p_box">
+                    <div class="context_p_box tc_context_p_box">
                         <h1>CHANLLENGE</h1>
-                        <p>There're two biggest challenges I met in TourConnect products design process. The first one is how to quickly understand and grasp the TourConnect product. The B2B product is much complex than before.</p>
+                        <p>· How to quickly understand and grasp the TourConnect product?</p>
+                        <p>· How to develop our product to make satisfaction for user.</p>
+                        <p>· How to redesign the product with minimal change?</p>
                     </div>
                 </div>
 
-                <div class="context_p">
-                    <div class="context_p_box sh_context_p_box">
+                <div class="context_p" style="background:#fafafa;">
+                    <span style="display:block;text-align:center;font-weight:bold;">PROCESS</span>
+                    <div class="context_p_box tc_context_p_box">
                         <h1>RESEARCH</h1>
-                        <p>Traditional definitions of design often focus on creating discrete solutions.</p>
-                        <b>User Feedback Review</b>
-                        <div class="swr_img_1"></div>
-                        <b>Previous User Journey Analysis</b>
-                        <div class="context_img_1 sh_context_img_2"></div>
+                        <b>Users Feedback Review</b>
+                        <p>I was interviewed users, analyzed the users feedbacks and reviewed users questions tried to define the problems from user perspective.</p>
+                        <div class="tc_img tc_img_2"></div>
+                        <b>Existing User Journey Analysis</b>
+                        <p>I was mapped the existing user journey to help us better understand our product. Also it can help us to observe what's the problems we have and why we have these problems.</p>
+                        <div class="tc_img tc_img_3"></div>
+                        <b>Users Analysis</b>
+                        <p>We analyzed existing user categories, user data and user goals to get a better understanding what we can do for users.</p>
+                        <div class="tc_img tc_img_1"></div>
                     </div>
                 </div>
 
                 <div class="context_p">
-                    <div class="context_p_box sh_context_p_box">
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>ANALYSIS</h1>
+                        <b>Problems</b>
+                        <p>I was redesign the search page at the beginning because of I thought the main problem was the bad experience on search partner page.Through the research I found the problem was not only caused by search partner page. So I was changed my original idea.</p>
+                        <div class="tc_img tc_img_5"></div>
+                        <div class="tc_img tc_img_6"></div>
+                    </div>
+                </div>
+
+                <div class="context_p" style="background:#fafafa;">
+                    <div class="context_p_box tc_context_p_box">
                         <h1>IDEATION</h1>
                         <p>After rounds of ideation and refine, our final design divided our target users into five categorise, and customized the new user flows related their scenarios and primary goals. More specifically, we redefined the user categories and identified users' goals at sign up，regrouped informations and guided them by bubble box to complete their company profile in order to accomplish their primary goal. We also cooperated with trigger email to encourage users to make their profile more pretty. The new user flows incredibly reduced the information input time and operation steps. Additional, they enhanced the product usability to make users don’t need to think about how to use our product.</p>
-                        <b>User Journey</b>
-                        <div class="sh_img_5"></div>
+                        <b>New User Journey</b>
+                        <div class="tc_img tc_img_4"></div>
                     </div>
                 </div>
 
                 <div class="context_p">
-                    <div class="context_p_box sh_context_p_box">
-                        <h1>SKETCH & PROTOTYPE</h1>
-                        <br>
-                        <b>Sketch</b>
-                        <div class="sh_img_6"></div>
-                        <br>
-                        <b>Prototype</b>
-                        <div class="sh_img_7"></div>
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>Wireframe</h1>
+                        <p>Working from user materials, research synthesis, and team discuss output, I created seven frameworks based three user group with different goals. And designed few idea sketches to compare which idea was better. I provided the deliverable and the example.</p>
+                        <b>User Flows Frameworks</b>
+                        <div class="tc_img tc_img_8"></div>
+                        <b>Sketches</b>
+                        <div class="tc_img tc_img_9"></div>
+                    </div>
+                </div>
+
+                <div class="context_p">
+                    <div class="context_p_box tc_context_p_box">
+                        <h1>FINAL VISUAL DESIGN</h1>
+                        <p>The entire visual design was delivered by myself.  And I worked very closely with engineer team throughout the process to make sure we all understood tradeoffs in the flows and designs.</p>
+                        <div class="tc_img tc_img_7"></div>
                     </div>
                 </div>
 
