--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -191,7 +191,7 @@
             <div class="section part part_10">
             	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
-			        	<a href="hci-detail.html" target="view_window" style="position: relative;display: inline-block;padding: 20px 25px;background: #258de8;border-radius: 10px; color:#fff;"><h1>See More Details</h1></a>
+			        	<a href="hci-detail.html" target="_blank" style="position: relative;display: inline-block;padding: 20px 25px;background: #258de8;border-radius: 10px; color:#fff;"><h1>See More Details</h1></a>
 			        </div>
 			    </div>
             </div>
