--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     </div>
 
-		<div class="title_header">
+		<div class="title_header" style=" height: 100vh;">
 
 			<div id="content">
 			<div class="canvas_img">
