--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -35,9 +35,9 @@
                     </div>
                     <div class="context_p_box tc_context_p_box">
                         <h1>CHANLLENGE</h1>
-                        <p>· How to quickly understand and grasp the TourConnect product?</p>
-                        <p>· How to develop our product to make satisfaction for user.</p>
+                        <p>· How to quickly understand the TourConnect product?</p>
                         <p>· How to redesign the product with minimal change?</p>
+                        <p>· How to work with engineers?</p>
                     </div>
                 </div>
 
