--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -79,7 +79,7 @@
                 <div class="context_p">
                     <div class="context_p_box tc_context_p_box">
                         <h1>Wireframe</h1>
-                        <p>Working from user materials, research synthesis, and team discuss output, I created seven frameworks based three user group with different goals. And designed few idea sketches to compare which idea was better. I provided the deliverable and the example.</p>
+                        <p>Working from user materials, research synthesis, and team discuss output, I created seven frameworks based three user group with different goals. And I was designed few idea sketches to compare which idea was better. I provided the deliverable and the example.</p>
                         <b>User Flows Frameworks</b>
                         <div class="tc_img tc_img_8"></div>
                         <b>Sketches</b>
