--- a/hci-detail.html
+++ b/hci-detail.html
@@ -7,7 +7,7 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai | Mila</title>
+    <title>Shuai | Health Care Information</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
