--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -31,7 +31,7 @@
 		    	    </div>
                     <div class="context_p_box tc_context_p_box">
                         <h1>PROJECT OVERVIEW</h1>
-                        <p>Redesign the current TourConnect website product to increase usage and improve the product usability.</p>
+                        <p>Redesign the current TourConnect product to increase usage and improve the product usability.</p>
                     </div>
                     <div class="context_p_box tc_context_p_box">
                         <h1>CHANLLENGE</h1>
