--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -52,7 +52,7 @@
                         <p>I was mapped the existing user journey to help us better understand our product. Also it can help us to observe what's the problems we have and why we have these problems.</p>
                         <div class="tc_img tc_img_3"></div>
                         <b>Users Analysis</b>
-                        <p>We analyzed existing user categories, user data and user goals to get a better understanding what we can do for users.</p>
+                        <p>We analyzed existing user categories, user data and user goals to get a better understanding our users.</p>
                         <div class="tc_img tc_img_1"></div>
                     </div>
                 </div>
