--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -82,6 +82,8 @@
                         <p>Working from user materials, research synthesis, and team discuss output, I created seven frameworks based three user group with different goals. And I was designed few idea sketches to compare which idea was better. I provided the deliverable and the example.</p>
                         <b>User Flows Frameworks</b>
                         <div class="tc_img tc_img_8"></div>
+                        <b>Wireframe</b>
+                        <div class="tc_img tc_img_10"></div>
                         <b>Sketches</b>
                         <div class="tc_img tc_img_9"></div>
                     </div>
