--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,14 @@
 	    		<h1>EXPERIENCE</h1>
 	    		<div class="ati">
 	    	      <div class="main_t">
+	    			<span class="main_t_l">UX DESIGNER in AT&T, Dallas, Texas, USA</span>
+	    			<span class="main_t_r">January 2017 - Present</span>
+	    		  </div>
+	    		<p>- Design the AT&T Business Center B2B Platform.</p>
+	    	    </div>
+
+	    		<div class="ati">
+	    	      <div class="main_t">
 	    			<span class="main_t_l">UX Designer in TourConnect, Dallas,Texas, USA</span>
 	    			<span class="main_t_r">April 2016 - December 2016</span>
 	    		  </div>
@@ -106,6 +114,22 @@
 	    		  </div>
 	    		<p>- Worked for Professor Oscar Fernandez as teaching assistant in Visual History course to help students with their homework</p>
 	    		<p>- Worked for Professor Ben Meyer as graduate assistant to support him design the APP.</p>
+	    	    </div>
+
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">PART TIME PAINT TEACHER in WoDe Studio, Wuhan, China</span>
+	    			<span class="main_t_r">January 2009 - September 2011</span>
+	    		  </div>
+	    		<p>- Teach students sketch paint.</p>
+	    	    </div>
+
+	    	    <div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">VOLUNTEER PAINT TEACHER in HongQiao High School, Wuhan, China</span>
+	    			<span class="main_t_r">May 2008 - September 2008</span>
+	    		  </div>
+	    		<p>- Teach students sketch paint.</p>
 	    	    </div>
 	    	</section>
 
