--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -7,7 +7,7 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai | Healthcare Information</title>
+    <title>Shuai | Hospital Communication Inc</title>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -46,7 +46,7 @@
 	      <div class="container_box cb_hci">
 
 	    	<div class="section part part_0">
-	    		<div class="slide title_inside"><span style="top:0;">Health Care Information TV App</span></div>
+	    		<div class="slide title_inside"><span style="top:0;">HCI Medicare TV App</span></div>
 	    		<a class="btn_down" href="#page2"><span class="btn_down_el"></span></a>
 	        </div>
 
@@ -58,7 +58,7 @@
 	    		<div class="section_text" style="width:45%; z-index:2; position:relative;">
 			        <div class="title_inside">About HCI</div>
 			        <div class="design_ui">
-			        	<span>The Health Care Information range from smart television to Medicare software for remotely administering education, communication, entertainment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span>
+			        	<span>The HCI range from smart television to Medicare software for remotely administering education, communication, entertainment and enterprise apps that increase patient satisfaction and enhance productivity of staff.</span>
 			        </div>
 			    </div>
 	        </div>
@@ -67,7 +67,7 @@
 	        	<div class="section_text" style="width: 100%;padding:80px 0 20px 0;margin: 0;">
 			        <div class="row_text">
 			        	<h2>What I do ?</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200;">Redesign the Media care television App</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200;">Redesign the Medicare Television App</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b design_img_b_1">
