--- a/portfolio-mila.html
+++ b/portfolio-mila.html
@@ -19,18 +19,18 @@
         
         <div class="context">
 		    <div class="context_left">
-		      <div class="context_left_title"><span>Health Care Information Television App</span></div>  
+		      <div class="context_left_title"><span>HCI Medicare Television App</span></div>  
 		      <div></div>
 		    </div>
 
 		    <div class="context_right">
-		    	<div class="context_title context_title_1"><div class="context_title_box context_title_box_1"><h1>Health care information television app</h1></div></div>
+		    	<div class="context_title context_title_1"><div class="context_title_box context_title_box_1"><h1>Medicare Television App</h1></div></div>
 		    	<div class="context_p">
                     <div class="context_p_box">
-                        <h1>What is the Health care information television app?</h1><br>
+                        <h1>What is the HCI Medicare Television App?</h1><br>
                         <p>Currently, global countries are facing a rapid aging of their population, due to this rise many industries are designing products that keep the elderly in mind. In the field of digital technology, more designers are also concerned with the utility of products for the elderly. This has become a popular audience to design for. </p>
                     <br>
-		    		     <p>The Health Care Information company products develops products ranging from smart television to medicare software (media care television app) for remotely administering education, communication, entertainment and enterprise apps that increase patient satisfaction and enhance productivity of staff. With the media care television app, patients can call for private service, learn from health care video and take the medical care test. We call this series of products the health care information television app.</p>
+		    		     <p>The Hospital Communications Inc products develops products ranging from smart television to medicare software (Mediacare Television App) for remotely administering education, communication, entertainment and enterprise apps that increase patient satisfaction and enhance productivity of staff. With the media care television app, patients can call for private service, learn from health care video and take the medical care test. We call this series of products the health care information television app.</p>
 		    	    </div>
                 </div>
 
@@ -43,7 +43,7 @@
 
                 <div class="context_p">
                     <div class="context_p_box">
-                        <p>The original Health care television app has been used for few years, but based on informal user feedback the original product had a discontented experience for users. The Health care television app redesign adopted the two perspectives from designers and users to redesign the project<em style="color:#fb4b4b;"> (Figure 1)</em>. Designers focused on the product features and the product characters in the original product, then designers from user perspective to improve the user’s experience and satisfaction in the redesign process.</p>
+                        <p>The original medicare television app has been used for few years, but based on informal user feedback the original product had a discontented experience for users. The Medicare television app redesign adopted the two perspectives from designers and users to redesign the project<em style="color:#fb4b4b;"> (Figure 1)</em>. Designers focused on the product features and the product characters in the original product, then designers from user perspective to improve the user’s experience and satisfaction in the redesign process.</p>
                     </div>
                 </div>    
 
@@ -57,7 +57,7 @@
 
                 <div class="context_p">
                     <div class="context_p_box">
-                        <p>Health care information established sound cooperation relationships with some companies or hospitals to help us find target users for interviews. We selected five participants randomly to join the user interview and user testing. Before user testing, design (control) group will interview five participants to observe how users use the television app and what problems they encounter. Try to find the challenge for designers<em style="color:#fb4b4b;"> (Figure 2)</em>.</p>
+                        <p>HCI established sound cooperation relationships with some companies or hospitals to help us find target users for interviews. We selected five participants randomly to join the user interview and user testing. Before user testing, design (control) group will interview five participants to observe how users use the television app and what problems they encounter. Try to find the challenge for designers<em style="color:#fb4b4b;"> (Figure 2)</em>.</p>
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
                         <h1 style="color:#333; text-align:center;">Challenge</h1><br>
                         <div class="context_img_3"></div>
                         </div>
-                        <p>The target user group for the health care information television app are patients aged 60-year-old and older who have chronic diseases and a range of physical and psychological problems.</p>
+                        <p>The target user group for the Medicare Television App are patients aged 60-year-old and older who have chronic diseases and a range of physical and psychological problems.</p>
                         <br>
                         <p>Human’s vision begins to degenerate at the age of 40 and many can gradually form presbyopia. Meanwhile, for the elderly, "color vision" also degrades with increased age, and thus it is difficult to distinguish between similar colors. Also, many elder people suffer from bad flexibility and coordination with increasing age. These attribute will affect aged peoples use of the remote that is used to interact with the app. On the psychological end, anxiety, irritability and lack of interest are common problems among aged people. Many of these people use remotes to control the television. However, it is not a good way to interact with elderly users. We should consider more about how to design a friendly and comfortably experience for users. The actual environment is one of the factors that will effect usage<em style="color:#fb4b4b;"> (Figure 3)</em>.</p>
                      </div> 
