--- a/portfolio-at&t.html
+++ b/portfolio-at&t.html
@@ -58,7 +58,8 @@
 	    		<div class="section_text" style="width:45%; z-index:2; position:relative;">
 			        <div class="title_inside">What I do in AT&T Business Center</div>
 			        <div class="design_ui">
-			        	<span>As a designer on the Digital Design User Experience Team, I worked closely with the Product team in an Agile/Scrum workflow to design visually-compelling and highly-usable web applications for a B2B Internet Service management product, AT&T Business Center. The product used by all AT&T's business clients.</span>
+			        	<span>Working in the Digital Design User Experience team, collaborating with the product team, business team and develop- ment team in an Agile/Scrum workflow to design visually-compelling and highly-usable web applications product for AT&T B2B. The product were used by all AT&T's business clients.</span><br>
+			        	<br><span style="font-size:0.75rem; font-color:#999;">(Due to NDA, I can't share them. Please feel free to contact with me if you interested.)</span>
 			        </div>
 			    </div>
 	        </div>
