--- a/myself.html
+++ b/myself.html
@@ -50,7 +50,7 @@
 			    <div class="personal_intro">
 		                   <div class="personal_intro_infor">
 		                       <div class="personal_intro_infor_left"></div>
-		                       <div class="personal_intro_infor_right"><h1>Hello, I am <b>Shuai Zhou</b></h1><p>I am looking for a <em style="color:#333;font-size:1.5rem;font-weight:700;">UI & UX design</em> full time job.</p></div>
+		                       <div class="personal_intro_infor_right"><h1>Hello, I am <b>Shuai Zhou</b></h1><p>I am looking for challenging <em style="color:#333;font-size:1.5rem;font-weight:700;">UI & UX design</em> job.</p></div>
 		                   </div>
 		        </div>
 			</div>
@@ -84,11 +84,11 @@
 
 			<div class="section part part_4">
 				<div class="mani_img"><img src="img/sohu_product.png"></div>
-				<div class="mani_text"><span>Learning from real-world projects is essential. By good fortune, I recently had the opportunity to join Sohu Internet company (one of the biggest internet companies in China), working for their HTML and UED departments.</span></div>
+				<div class="mani_text"><span>Learning from real-world projects is essential. By good fortune, I recently had the opportunity to join Sohu Internet company (one of the biggest internet companies in China), worked as UX designer for their Mobile departments.</span></div>
 			</div>
 
 			<div class="section part part_5">
-				<div class="mani_text"><span>After working at Sohu, I returned to school to finish my masters degree. Then I was worked in a startup company named TourConnect for 9 months. Now I am looking for a new position in user experience design.</span></div>
+				<div class="mani_text"><span>After the work in Sohu, I returned to school to finish my masters degree. When I graduated, I was worked in a startup company named TourConnect for 9 months. Then, I have joined AT&T DDUX team as UX designer. I love UX, I love what I did.</span></div>
 			</div>
 
 	      </div>
