--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,13 @@
 	    	<div class="cv_name"><span>Shuai Zhou</span></div>
 	    	<section class="edu">
 	    		<h1>EDUCATION</h1>
+	    		<div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">Harrisburg University of Science and Technology, Harrisburg, PA</span>
+	    			<span class="main_t_r">January 2017 - Present</span>
+	    		  </div>
+	    		<p>- Master of Science in Project Management</p>
+	    	    </div>
 	    	    <div class="ati">
 	    	      <div class="main_t">
 	    			<span class="main_t_l">University of Cincinnati, Cincinnati, Ohio</span>
@@ -71,7 +78,9 @@
 	    			<span class="main_t_l">UX DESIGNER in AT&T, Dallas, Texas, USA</span>
 	    			<span class="main_t_r">January 2017 - Present</span>
 	    		  </div>
-	    		<p>- Design the AT&T Business Center B2B Platform.</p>
+	    		<p>Lead user interface & experience designer for AT&T Business Center application for Web.
+Organized, tailored, and moderated local and user testing sessions based on personas and use cases.
+Designed mock-ups for product team to show how our applications would look if integrated into the systems.</p>
 	    	    </div>
 
 	    		<div class="ati">
@@ -124,17 +133,19 @@
 	    		<p>- Teach students sketch paint.</p>
 	    	    </div>
 
-	    	    <div class="ati">
-	    	      <div class="main_t">
-	    			<span class="main_t_l">VOLUNTEER PAINT TEACHER in HongQiao High School, Wuhan, China</span>
-	    			<span class="main_t_r">May 2008 - September 2008</span>
-	    		  </div>
-	    		<p>- Teach students sketch paint.</p>
-	    	    </div>
 	    	</section>
 
 	    	<section class="pro">
 	    		<h1>PROJECTS</h1>
+	    		<div class="ati">
+	    	      <div class="main_t">
+	    			<span class="main_t_l">AT&T B2B Product</span>
+	    			<span class="main_t_r">January 2017 - Present</span>
+	    		  </div>
+	    		<p>- Lead user interface & experience designer for AT&T Business Center application for Web.
+Organized, tailored, and moderated local and user testing sessions based on personas and use cases.
+Designed mock-ups for product team to show how our applications would look if integrated into the systems.</p>
+	    	    </div>
 
 	    		<div class="ati">
 	    	      <div class="main_t">
