--- a/portfolio-at&t.html
+++ b/portfolio-at&t.html
@@ -33,7 +33,7 @@
 		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
 		        <ul>
 		          <li><a href="portfolio.html">PORTFOLIO</a></li>
-		          <li><a href="resume.html">RESUME</a></li>
+		          <li><a href="img/ShuaiZhou's Resume.pdf" target="view_window">RESUME</a></li>
 		          <li><a href="myself.html">ABOUT ME</a></li>
 		        </ul>
 		      </div>
