--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,20 @@
 
            <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="TourConnect">
+                  <a href="portfolio-at&t.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(240,123,13);" title="AT&T">
+                    <span class="works_category_tiles_item_cover bg">
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/bc1.png) no-repeat; background-position:center; background-size:100%;"></div>
+                    </span>
+                    <span>
+                        <h2 class="heading2">AT&T Business Center</h2>
+                    </span>
+                  </a>
+              </div>
+            </section>
+
+            <section class="container_piece container_piece_1" style="height:400px;">
+              <div class="works_category_tiles"> 
+                  <a href="portfolio-tourconnect.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(0, 188, 212);" title="TourConnect">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/tourconnect_explain.svg) no-repeat; background-position:center; background-size:20%;"></div>
                     </span>
@@ -65,7 +78,7 @@
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2">HCI TV App</h2>
+                        <h2 class="heading2">HCI Medicare TV App</h2>
                     </span>
                   </a>
               </div>
@@ -78,7 +91,7 @@
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/seeword22.png); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2">See Word Reading</h2>
+                        <h2 class="heading2">See Word Reading App</h2>
                     </span>
                   </a>
               </div>
