--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -36,8 +36,8 @@
                     <div class="context_p_box tc_context_p_box">
                         <h1>CHANLLENGE</h1>
                         <p>· How to quickly understand the TourConnect product?</p>
-                        <p>· How to redesign the product with minimal change?</p>
-                        <p>· How to work with engineers?</p>
+                        <p>· How to provide best experience for our users?</p>
+                        <p>· How to merger business requirements vs user requirements?</p>
                     </div>
                 </div>
 
