--- a/portfolio-tourconnect.html
+++ b/portfolio-tourconnect.html
@@ -122,7 +122,7 @@
             <div class="section part part_7">
             	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
-			        	<a href="" target="_blank" style="position: relative;display: inline-block;padding: 20px 25px;background: #00BCD4;border-radius: 10px; color:#fff;"><h1>See More Details</h1></a>
+			        	<a href="tourconnect-detail.html" target="_blank" style="position: relative;display: inline-block;padding: 20px 25px;background: #00BCD4;border-radius: 10px; color:#fff;"><h1>See More Details</h1></a>
 			        </div>
 			    </div>
             </div>
