--- a/tourconnect-detail.html
+++ b/tourconnect-detail.html
@@ -37,7 +37,7 @@
                         <h1>CHANLLENGE</h1>
                         <p>· How to quickly understand the TourConnect product?</p>
                         <p>· How to provide best experience for our users?</p>
-                        <p>· How to merger business requirements vs user requirements?</p>
+                        <p>· How to merger business requirements & user requirements?</p>
                     </div>
                 </div>
 
