--- a/index.html
+++ b/index.html
@@ -36,16 +36,6 @@
       <div class="top-img">
             <a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
         </div>
-        
-     <!-- <div class="menu_list">
-          <div id="menu_list_ha">
-            <ul>
-              <li><a href="myself.html">ABOUT ME</a></li>
-              <li><a href="resume.html">RESUME</a></li>
-              <li><a href="portflio.html">PORTFLIO</a></li>
-            </ul>
-          </div>
-          </div> -->
 
           <div id="navbar" class="menu">
           <a href="#" class="menubtn">menu</a>
@@ -64,17 +54,33 @@
 
 		<div class="title_header" style=" height: 100vh;">
 
-			<div id="content">
-			<div class="canvas_img">
-				<canvas class="ani" id="ani" data-processing-sources="background.pde" tabindex="0" style="image-rendering: -webkit-optimize-contrast !important;">
-					<p>Your browser does not support the canvas tag.</p>
-					<!-- Note: you can put any alternative content here. -->
-				</canvas>
-				<noscript>
-					&lt;p&gt;JavaScript is required to view the contents of this page.&lt;/p&gt;
-				</noscript>
-	    	</div>
-		</div>
+<div id="particles-js">
+</div>
+
+<!-- scripts -->
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
+
+<script>
+  var count_particles, stats, update;
+  stats = new Stats;
+  stats.setMode(0);
+  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.left = '0px';
+  stats.domElement.style.top = '0px';
+  document.body.appendChild(stats.domElement);
+  count_particles = document.querySelector('.js-count-particles');
+  update = function() {
+    stats.begin();
+    stats.end();
+    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+    }
+    requestAnimationFrame(update);
+  };
+  requestAnimationFrame(update);
+</script>
+
 
 			<div class="sub_th_1">
 		      <div class="sub_th_sb">		
