--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 			<div class="sub_th_1">
 		      <div class="sub_th_sb">		
-				<p class="p1" style="text-align:center;">I Love What I do</p>
+				<p class="p1" style="text-align:center;">I Love What I Do</p>
 				<p class="p3"></p>
 			  </div>	
 				<p class="p4" style="text-align:center;">Scroll down to learn more</p>
