--- a/myself.html
+++ b/myself.html
@@ -73,13 +73,13 @@
 				</div>
 
                 <div class="maps_text">
-                	<div class="mani_text"><span>I came to the US in 2012 to to earn my masters degree. I decided to study abroad because I wanted to learn about the world around me and expand my horizons of thinking, but I didn't have specific destination in mind at first.</span></div>
+                	<div class="mani_text"><span>I came to the US in 2012 to earn my master's degree. I decided to study abroad because I wanted to learn about the world around me and expand my horizons of thinking, but I didn't have a specific destination in mind at first.</span></div>
                 </div>
 			</div>
 
 			<div class="section part part_3">
 				<div class="mani_img"><img src="img/computer.png"></div>
-				<div class="mani_text"><span>I was fortunate to get involved in many meaningful courses and projects in my first year. For instance, a research methodology course, design strategy theory course, See Word reading app project and a P&G project for the elderly. As I gained a deeper understanding of how lives can be positively affected through online technologies, I found what I wanted to do.</span></div>
+				<div class="mani_text"><span>I was fortunate to get involved in many meaningful courses and projects during my first year. For instance, a research methodology course, design strategy theory course, See Word reading app project and a P&G project for the elderly. As I gained a deeper understanding of how lives can be positively affected through online technologies, I found what I wanted to do.</span></div>
 			</div>
 
 			<div class="section part part_4">
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="section part part_5">
-				<div class="mani_text"><span>After the work in Sohu, I returned to school to finish my masters degree. When I graduated, I was worked in a startup company named TourConnect for 9 months. Then, I have joined AT&T DDUX team as UX designer. I love UX, I love what I did.</span></div>
+				<div class="mani_text"><span>After the work in Sohu, I returned to school to finish my master's degree. When I graduated, I was worked in a startup company named TourConnect for 9 months. Then, I have joined AT&T DDUX team as UX designer. I love UX, I love what I did.</span></div>
 			</div>
 
 	      </div>
